<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Homescreen2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="210dp"
            android:src="@drawable/k4"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:textSize="15sp"
            android:padding="5dp"
            android:text="@string/str1"
            android:textStyle="bold">
        </TextView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:background="@color/teal_200"
            android:text="@string/details_or_book_appointment"
            android:textStyle="bold" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_height="210dp"
            android:src="@drawable/k5"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:textSize="15sp"
            android:padding="5dp"
            android:text="@string/str2"
            android:textStyle="bold" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:background="@color/teal_200"
            android:text="@string/details_or_book_appointment"
            android:textStyle="bold" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="210dp"
            android:src="@drawable/k6"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:textSize="15sp"
            android:padding="5dp"
            android:text="@string/str3"
            android:textStyle="bold"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:background="@color/teal_200"
            android:text="@string/details_or_book_appointment"
            android:textStyle="bold" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="210dp"
            android:src="@drawable/k7"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:textSize="15sp"
            android:padding="5dp"
            android:text="@string/str4"
            android:textStyle="bold">
        </TextView>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:background="@color/teal_200"
            android:text="@string/details_or_book_appointment"
            android:textStyle="bold" />
    </LinearLayout>

</ScrollView>