<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="420dp"
    android:background="@drawable/background1"
    app:cardElevation="4dp">

    <LinearLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/img6"
            android:scaleType="centerCrop"
            android:background="@drawable/circle_button_icon"
            app:civ_circle_background_color="@color/light_orange"
            tools:ignore="MissingClass" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="16dp">

            <TextView
                android:id="@+id/profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/swati"
                android:textSize="48sp"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profile_bio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:text="specialization_xyz_abc"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="200dp">

        <Button
            android:id="@+id/call_button"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:textAlignment="center"
            android:drawableLeft="@drawable/chat"
            android:text="@string/Call"
            android:background="@drawable/circle_button_icon"
            >

        </Button>

        <Button
            android:id="@+id/location_button"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:drawableLeft="@drawable/location"
            android:text="@string/location"
            android:textAlignment="center"
            android:background="@drawable/circle_button_icon"
            android:layout_marginStart="10dp">

        </Button>
        <Button
            android:id="@+id/text3"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:text="share"
            android:textAlignment="center"
            android:layout_marginStart="10dp"
            android:textSize="18sp"
            android:drawableLeft="@drawable/share"
            android:background="@drawable/circle_button_icon"
            tools:ignore="HardcodedText">
        </Button>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:layout_marginTop="280dp"
        android:padding="10dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bookbtn_id"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/book_appointment"
            android:background="#f5d4ad"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:layout_marginTop="350dp"
        android:padding="10dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/text5"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/designs"
            android:textAlignment="center"
            android:background="#FF03DAC5"
            android:textColor="#000"
            android:textSize="18sp" />
    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="450dp">

        <ImageButton
            android:id="@+id/design1"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginStart="4dp"
            android:src="@drawable/img1"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="1dp"
            android:contentDescription="TODO">
        </ImageButton>

        <ImageButton
            android:id="@+id/design2"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginStart="4dp"
            android:src="@drawable/img1"
            app:layout_constraintStart_toEndOf="@+id/design1"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="1dp"
            android:contentDescription="TODO">
        </ImageButton>

        <ImageButton
            android:id="@+id/design3"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginStart="4dp"
            android:src="@drawable/img1"
            app:layout_constraintTop_toBottomOf="@+id/design1"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="1dp"
            android:contentDescription="TODO">
        </ImageButton>

        <ImageButton
            android:id="@+id/design4"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginStart="4dp"
            android:src="@drawable/img5"
            app:layout_constraintStart_toEndOf="@+id/design3"
            app:layout_constraintTop_toBottomOf="@+id/design1"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="1dp"
            android:contentDescription="TODO">
        </ImageButton>
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>
    </ScrollView>